--- a/client/src/stylesheets/app.scss
+++ b/client/src/stylesheets/app.scss
@@ -1,3 +1,11 @@
 body {
-    background-color: #ddd;
+    background-color: #ccc;
+    text-align: center;
+    display: flex;
+    align-content: space-around;
+
+    #app {
+        flex: 1;
+        align-items: center;
+    }
 }
